--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
       <h2>Easy Appointments</h2>
       <p>Schedule appointments with your preferred doctors at your convenience.</p>
     </div>
+    <div class="feature">
+      <h2>Health Record Integration</h2>
+      <p>Access and manage your health records securely in one place.</p>
+    </div>
+  </section>
+
+  <section class="buttons">
+    <div class="button">
+      <a href="/doctor-login.html" class="google-login-button">Login for Doctors</a>
+    </div>
+    <div class="button">
+      <a href="/patient-login.html" class="google-login-button">Login for Patients</a>
+    </div>
   </section>
 
   <footer>
