--- a/index.html
+++ b/index.html
@@ -13,30 +13,15 @@
   </header>
 
   <section class="features">
-    <div class="feature">
-      <h2>Virtual Consultations</h2>
-      <p>Connect with doctors from anywhere through secure video conferencing.</p>
-    </div>
-    <div class="feature">
-      <h2>Prescription Management</h2>
-      <p>Effortlessly manage your prescriptions and medications online.</p>
-    </div>
-    <div class="feature">
-      <h2>Easy Appointments</h2>
-      <p>Schedule appointments with your preferred doctors at your convenience.</p>
-    </div>
-    <div class="feature">
-      <h2>Health Record Integration</h2>
-      <p>Access and manage your health records securely in one place.</p>
-    </div>
+    <!-- ... Features content ... -->
   </section>
 
   <section class="buttons">
-    <div class="button">
-      <a href="/doctor-login.html" class="google-login-button">Login for Doctors</a>
+    <div class="button-container">
+      <a href="/doctor-login.html" class="button google-login-button">Login for Doctors</a>
     </div>
-    <div class="button">
-      <a href="/patient-login.html" class="google-login-button">Login for Patients</a>
+    <div class="button-container">
+      <a href="/patient-login.html" class="button google-login-button">Login for Patients</a>
     </div>
   </section>
 
