--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
   </header>
 
   <section class="features">
-    <!-- ... Features content ... -->
+        <div class="feature">
+      <h2>Virtual Consultations</h2>
+      <p>Connect with doctors from anywhere through secure video conferencing.</p>
+    </div>
+    <div class="feature">
+      <h2>Prescription Management</h2>
+      <p>Effortlessly manage your prescriptions and medications online.</p>
+    </div>
+    <div class="feature">
+      <h2>Easy Appointments</h2>
+      <p>Schedule appointments with your preferred doctors at your convenience.</p>
+    </div>
+    <div class="feature">
+      <h2>Health Record Integration</h2>
+      <p>Access and manage your health records securely in one place.</p>
+    </div>
   </section>
 
   <section class="buttons">
